Create a script to install applications, remove that stuff from the dotbot install. Install tux and tmuxinator.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,7 +5,10 @@
     ~/.vim: vim/
     ~/.vimrc: vimrc
     ~/.gvimrc: gvimrc
-
+    ~/.bash_profile: bash_profile
+    ~/.bashrc: bashrc
+    ~/.profile: profile
+    ~/.tmuxinator: tmuxinator/
 
 - shell:
   # Update DotBot and other git submodules 
@@ -13,34 +16,11 @@
   # Make MacVim the default handler for text files.
   - ["defaults write com.apple.LaunchServices LSHandlers -array-add '{LSHandlerContentType=public.plain-text;LSHandlerRoleAll=com.sublimetext.3;}'", "Making MacVim the default text editor"]
 
-  # Install rvm and ruby
-    # - ['which rvm || \curl -sSL https://get.rvm.io | bash -s stable', Install RVM stable if it is not already installed]
-    # - [rvm get stable, Update RVM]
-  - [rvm install 2.2.1, Install Ruby 2.2.1]
-
-  # update homebrew
-  - ['which brew || ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"',
-    Install homebrew if its not already installled]
-  - [brew update, Update homebrew]
-
-  # Install postgres
-  - 
-    description: Install postgress with Homebrew
-    command: brew install postgres
-    stdout: true
-    stderr: true
-  - [mkdir -p ~/Library/LaunchAgents, Make the LaunchAgents directory]
-  - [ln -sfv /usr/local/opt/postgresql/*.plist ~/Library/LaunchAgents, Create a symbolic link to the postgres plist file]
-  - [launchctl load ~/Library/LaunchAgents/homebrew.mxcl.postgresql.plist, Launch postgress]
-
   # Install/update VIM plugins with Vundler.
   - ['vim +PluginInstall +qall', Update VIM plugins with Vundler]
 
-
-
-
-    #-
-    #description: Update RVM
-    #command: 'rvm get stable'
-    #stdout: true
-    #stderr: true
+  #-
+  #description: Update RVM
+  #command: 'rvm get stable'
+  #stdout: true
+  #stderr: true
