--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,7 +14,7 @@
   # Update DotBot and other git submodules 
   - [git submodule update --init --recursive, Installing submodules]
   # Make MacVim the default handler for text files.
-  - ["defaults write com.apple.LaunchServices LSHandlers -array-add '{LSHandlerContentType=public.plain-text;LSHandlerRoleAll=com.sublimetext.3;}'", "Making MacVim the default text editor"]
+  - ["defaults write com.apple.LaunchServices LSHandlers -array-add '{LSHandlerContentType=public.plain-text;LSHandlerRoleAll=com.MacVim;}'", "Making MacVim the default text editor"]
 
   # Install/update VIM plugins with Vundler.
   - ['vim +PluginInstall +qall', Update VIM plugins with Vundler]
