--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,10 +9,12 @@
     ~/.bashrc: bashrc
     ~/.profile: profile
     ~/.tmuxinator: tmuxinator/
+    ~/.asdf: asdf/
 
 - shell:
   # Update DotBot and other git submodules 
   - [git submodule update --init --recursive, Installing submodules]
+
   # Make MacVim the default handler for text files.
   - ["defaults write com.apple.LaunchServices LSHandlers -array-add '{LSHandlerContentType=public.plain-text;LSHandlerRoleAll=com.MacVim;}'", "Making MacVim the default text editor"]
 
