--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,6 +10,7 @@
     ~/.profile: profile
     ~/.tmuxinator: tmuxinator/
     ~/.asdf: asdf/
+    ~/.ctags: ctags
 
 - shell:
   # Update DotBot and other git submodules 
@@ -20,6 +21,12 @@
 
   # Install/update VIM plugins with Vundler.
   - ['vim +PluginInstall +qall', Update VIM plugins with Vundler]
+
+  # Install Erlang plugin for asdf
+  - ['asdf plugin-add Erlang https://github.com/HashNuke/asdf-erlang', Installing Erlang plugin for asdf]
+
+  # Install Elixer plugin for asdf
+  - ['asdf plugin-add Elixir https://github.com/HashNuke/asdf-elixir', Installing Elixir plugin for asdf]
 
   #-
   #description: Update RVM
